Renormalize probabilities in float64
float32 is not precise enough, and that was causing the ValueErrors
during generation

--- a/rnn_tutorial/lstm_text.ipynb
+++ b/rnn_tutorial/lstm_text.ipynb
@@ -339,9 +339,9 @@
     "    h_t, c_t = recurrent_layer._step(T.ones(1), x_t, h_p, c_p)\n",
     "    energy = T.dot(h_t, logreg_layer.W) + logreg_layer.b\n",
     "\n",
-    "    energy_exp = T.exp(energy - T.max(energy, 1)[:, None])\n",
+    "    energy_exp = T.exp(energy - T.max(energy, axis=1, keepdims=True))\n",
     "\n",
-    "    output = energy_exp / energy_exp.sum(1)[:, None]\n",
+    "    output = energy_exp / energy_exp.sum(axis=1, keepdims=True)\n",
     "    single_step = theano.function([x_t, h_p, c_p], [output, h_t, c_t])\n",
     "\n",
     "    start_time = time.clock()\n",
@@ -369,16 +369,29 @@
     "                        x_t = dictionary[char]\n",
     "                        prediction, h_p, c_p = single_step(x_t, h_p.flatten(),\n",
     "                                                           c_p.flatten())\n",
-    "                    sample = numpy.random.multinomial(1, prediction.flatten())\n",
+    "                    # Renormalize probability in float64\n",
+    "                    flat_prediction = prediction.flatten()\n",
+    "                    flat_pred_sum = flat_prediction.sum(dtype='float64')\n",
+    "                    if flat_pred_sum > 1:\n",
+    "                        flat_prediction = flat_prediction.astype('float64') / flat_pred_sum\n",
+    "                    sample = numpy.random.multinomial(1, flat_prediction)\n",
+    "\n",
     "                    for i in range(450):\n",
     "                        x_t = numpy.argmax(sample)\n",
     "                        prediction, h_p, c_p = single_step(x_t, h_p.flatten(),\n",
     "                                                           c_p.flatten())\n",
+    "                        # Renormalize probability in float64\n",
+    "                        flat_prediction = prediction.flatten()\n",
+    "                        flat_pred_sum = flat_prediction.sum(dtype='float64')\n",
+    "                        if flat_pred_sum > 1:\n",
+    "                            flat_prediction = flat_prediction.astype('float64') / flat_pred_sum\n",
+    "                        sample = numpy.random.multinomial(1, flat_prediction)\n",
+    "\n",
     "                        sentence += reverse_mapping[x_t]\n",
-    "                        sample = numpy.random.multinomial(1, prediction.flatten())\n",
+    "\n",
     "                    print 'LSTM: \"' + sentence + '\"'\n",
-    "                except ValueError:\n",
-    "                    print 'Something went wrong during sentence generation.'\n",
+    "                except ValueError as e:\n",
+    "                    print 'Something went wrong during sentence generation: {}'.format(e)\n",
     "\n",
     "            if iteration % 40 == 0:\n",
     "                print 'epoch:', epoch, '  minibatch:', iteration\n",
