added section about things to play around with

--- a/rnn_tutorial/lstm_text.ipynb
+++ b/rnn_tutorial/lstm_text.ipynb
@@ -461,6 +461,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "It can take a while before the text starts to look more reasonable but here are some things to experiment with:\n",
+    "* Smarter optimization algorithms (or at least momentum)\n",
+    "* Initializing the recurrent weights orthogonally\n",
+    "* The sizes of the initial weights and biases (think about what the gates do)\n",
+    "* Different sentence prefixes\n",
+    "* Changing the temperature of the character distribution during generation. What happens when you generate deterministically?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
