Small changes and typos

--- a/rnn_tutorial/lstm_text.ipynb
+++ b/rnn_tutorial/lstm_text.ipynb
@@ -22,7 +22,7 @@
     "import requests\n",
     "import gzip\n",
     "\n",
-    "import cPickle as pkl\n",
+    "from six.moves import cPickle as pkl\n",
     "import time\n",
     "\n",
     "import numpy\n",
@@ -189,8 +189,8 @@
     "\n",
     "        # compute vector of class-membership probabilities in symbolic form\n",
     "        energy = T.dot(input, self.W) + self.b\n",
-    "        energy_exp = T.exp(energy - T.max(energy, 2)[:, :, None])\n",
-    "        pmf = energy_exp / energy_exp.sum(2)[:, :, None]\n",
+    "        energy_exp = T.exp(energy - T.max(energy, axis=2, keepdims=True))\n",
+    "        pmf = energy_exp / energy_exp.sum(axis=2, keepdims=True)\n",
     "        self.p_y_given_x = pmf\n",
     "        self.params = [self.W, self.b]"
    ]
