--- a/rnn_tutorial/simple_rnn.ipynb
+++ b/rnn_tutorial/simple_rnn.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now compile the function that wil update the parameters of the model using gradient descent. "
+    "We now compile the function that will update the parameters of the model using gradient descent. "
    ]
   },
   {
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "for i in range(1000):\n",
+    "for i in range(1001):\n",
     "    mse_train = update_model(data_train)\n",
     "    \n",
     "    if i % 100 == 0:\n",
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Small scale optimizations of this type often benefit from more advanced second order methods. The following block defines some functions that allow you to experiment with off-the-shelve optimization routines. In this case we used l-BFGS."
+    "Small scale optimizations of this type often benefit from more advanced second order methods. The following block defines some functions that allow you to experiment with off-the-shelf optimization routines. In this case we used L-BFGS."
    ]
   },
   {
