Add name to variable to help debug

--- a/debug/Debug.ipynb
+++ b/debug/Debug.ipynb
@@ -95,7 +95,9 @@
     "x = T.vector()\n",
     "y = T.vector()\n",
     "z = x + x\n",
+    "z.name = \"z1\"\n",
     "z = z * y\n",
+    "z.name = \"z2\"\n",
     "f = theano.function([x, y], z, mode=mode)\n",
     "f(np.ones((2,)), np.ones((3,)))"
    ]
