Fix typo in fuel_tutorial

--- a/fuel_tutorial/fuel_tutorial.ipynb
+++ b/fuel_tutorial/fuel_tutorial.ipynb
@@ -275,7 +275,7 @@
     "    axis_labels={'features': ('batch', 'height', 'width'), 'targets': ('batch', 'index')},\n",
     "    sources=('features',))\n",
     "\n",
-    "state = dataset.open()\n",
+    "state = restricted_dataset.open()\n",
     "print(restricted_dataset.get_data(state=state, request=[0, 1]))\n",
     "restricted_dataset.close(state=state)"
    ]
